rework link absolute for github page

--- a/thor_scan/series/Nano_Machine/page_nm.html
+++ b/thor_scan/series/Nano_Machine/page_nm.html
@@ -4,40 +4,40 @@
     <meta charset="UTF-8">
     <meta name="description" content="Voici un site de scan français de manhwa et manga">
     <title>Nano Machine</title>
-    <link rel="stylesheet" href="/thor_scan/series/Nano_Machine/style_nanomachine.css">
+    <link rel="stylesheet" href="style_nanomachine.css">
 </head>
 <body>
 <header class="header">
     <nav class="header-nav">
-        <a href="/thor_scan/main/main.html" class="nav-button">
-            <img src="/thor_scan/icon/thor_logo.png" class="btn-img" alt="Logo Thor Scan">
+        <a href="../../main/main.html" class="nav-button">
+            <img src="../../icon/thor_logo.png" class="btn-img" alt="Logo Thor Scan">
         </a>
-        <a href="/thor_scan/main/main.html" class="nav-link">
-            <img src="/thor_scan/icon/icon_accueil.png" class="textbutton" alt="Accueil">
+        <a href="../../main/main.html" class="nav-link">
+            <img src="../../icon/icon_accueil.png" class="textbutton" alt="Accueil">
             <span>Accueil</span>
         </a>
-        <a href="/catalogue.html" class="nav-link">
-            <img src="/thor_scan/icon/series-icon.png" class="textbutton" alt="Catalogue">
+        <a href="../../catalogue.html" class="nav-link">
+            <img src="../../icon/series-icon.png" class="textbutton" alt="Catalogue">
             <span>Catalogue</span>
         </a>
     </nav>
 
     <div class="header-poster-container">
-        <img src="/thor_scan/series/Nano_Machine/poster_Nano.jpg" class="header-poster" alt="poster Nano Machine">
+        <img src="poster_Nano.jpg" class="header-poster" alt="poster Nano Machine">
         <h1>Nano Machine</h1>
         <h2>Informations</h2>
 
         <div class="info-container">
             <div class="info-item">
-                <img src="/thor_scan/icon/autor.png" alt="Auteur" class="header-icon">
+                <img src="../../icon/autor.png" alt="Auteur" class="header-icon">
                 <span>Auteur: Hyeon Jeolmu</span>
             </div>
             <div class="info-item">
-                <img src="/thor_scan/icon/artist_logo.png" alt="Artiste" class="header-icon">
+                <img src="../../icon/artist_logo.png" alt="Artiste" class="header-icon">
                 <span>Artiste: Geumgang Bulgoe</span>
             </div>
             <div class="info-item">
-                <img src="/thor_scan/icon/calendar.png" alt="Date" class="header-icon">
+                <img src="../../icon/calendar.png" alt="Date" class="header-icon">
                 <span>Sortie: 10 juin 2020</span>
             </div>
         </div>
@@ -53,23 +53,23 @@
     <h3>Chapitres</h3>
     <div class="chapter-row">
         <button class="chapter-card">
-            <a href="/thor_scan/series/Nano_Machine/chapitres/chap1/chap1.html">
-            <img src="/thor_scan/series/Nano_Machine/chapitres/preview.jpg" alt="Nouveau" class="new-icon">
-            <span class="title_chapter">Chapitre 1</span>
+            <a href="chapitres/chap1/chap1.html">
+                <img src="chapitres/preview.jpg" alt="Nouveau" class="new-icon">
+                <span class="title_chapter">Chapitre 1</span>
             </a>
         </button>
 
         <button class="chapter-card">
-            <a href="/thor_scan/series/Nano_Machine/chapitres/chap2/chap2.html">
-            <img src="/thor_scan/series/Nano_Machine/chapitres/preview.jpg" alt="Nouveau" class="new-icon">
-            <span class="title_chapter">Chapitre 2</span>
+            <a href="chapitres/chap2/chap2.html">
+                <img src="chapitres/preview.jpg" alt="Nouveau" class="new-icon">
+                <span class="title_chapter">Chapitre 2</span>
             </a>
         </button>
 
         <button class="chapter-card">
-            <a href="/thor_scan/series/Nano_Machine/chapitres/chap3/chap3.html">
-            <img src="/thor_scan/series/Nano_Machine/chapitres/preview.jpg" alt="Nouveau" class="new-icon">
-            <span class="title_chapter">Chapitre 3</span>
+            <a href="chapitres/chap3/chap3.html">
+                <img src="chapitres/preview.jpg" alt="Nouveau" class="new-icon">
+                <span class="title_chapter">Chapitre 3</span>
             </a>
         </button>
     </div>
