modif link to main.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta http-equiv="refresh" content="0; url=/thor-scan/main/main.html"/>
+  <meta http-equiv="refresh" content="0; url=main/main.html"/>
 </head>
 <body>
 </body>
