fix another bug in index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Redirection...</title>
   <!-- Redirige vers main/main.html -->
-  <meta http-equiv="refresh" content="0; url=main/main.html">
+  <meta http-equiv="refresh" content="0; url=thor_scan/main/main.html">
 </head>
 <body>
-  <p>Si vous n'êtes pas redirigé automatiquement, <a href="main/main.html">cliquez ici</a>.</p>
+  <p>Si vous n'êtes pas redirigé automatiquement, <a href="thor_scan/main/main.html">cliquez ici</a>.</p>
 </body>
 </html>
