add preview image horimiya

--- a/thor_scan/series/Horimiya/page_hr.html
+++ b/thor_scan/series/Horimiya/page_hr.html
@@ -55,22 +55,22 @@ Lorsqu'ils découvrent leurs véritables personnalités, une amitié puis une ro
     <h3>Chapitres</h3>
     <div class="chapter-row">
         <button class="chapter-card">
-            <a href="chapitres/chap1/chap1.html">
-                <img src="chapitres/preview.jpg" alt="Nouveau" class="new-icon">
+            <a href="chapitre/chap1/chap1.html">
+                <img src="chapitre/preview.png" alt="Nouveau" class="new-icon">
                 <span class="title_chapter">Chapitre 1</span>
             </a>
         </button>
 
         <button class="chapter-card">
-            <a href="chapitres/chap2/chap2.html">
-                <img src="chapitres/preview.jpg" alt="Nouveau" class="new-icon">
+            <a href="chapitre/chap2/chap2.html">
+                <img src="chapitre/preview.png" alt="Nouveau" class="new-icon">
                 <span class="title_chapter">Chapitre 2</span>
             </a>
         </button>
 
         <button class="chapter-card">
-            <a href="chapitres/chap3/chap3.html">
-                <img src="chapitres/preview.jpg" alt="Nouveau" class="new-icon">
+            <a href="chapitre/chap3/chap3.html">
+                <img src="chapitre/preview.png" alt="Nouveau" class="new-icon">
                 <span class="title_chapter">Chapitre 3</span>
             </a>
         </button>
