--- a/thor_scan/main/main.html
+++ b/thor_scan/main/main.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="scan-card">
-                <a href="../series/solo_leveling/page sl.html">
+                <a href="../series/solo_leveling/page_sl.html">
                     <img src="../series/solo_leveling/poste_sl.jpg" alt="Solo Leveling">
                     <p>Solo Leveling</p>
                 </a>
